fixed horizontal scrolling on users list

--- a/frontend/src/Components/users/Users.scss
+++ b/frontend/src/Components/users/Users.scss
@@ -10,6 +10,7 @@
     height: 80vh;
     background-color: white;
     overflow-y: scroll;
+    overflow-x: hidden;
     overflow-wrap: break-word;
     border-radius: 8px;
     box-shadow: 0px 2px 5px $hover-blue;
